Math_10/evosuite/original/evosuite-report-org/test_build_org.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Math_10_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:target/classes/  /home/liumengjiao/Desktop/CI/Evosuite/Math_10/Math/evosuite/3/org/apache/commons/math3/analysis/differentiation/DSCompiler_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Math_10/Math/evosuite/3/org/apache/commons/math3/analysis/differentiation/DSCompiler_ESTest.java >> evosuite-report-org/test_build_org.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Math_10/Math/evosuite/3/org/apache/commons/math3/analysis/differentiation/DSCompiler_ESTest.java:43: error: cannot find symbol
      dSCompiler0.expm1(doubleArray0, 0, doubleArray0, 0);
                 ^
  symbol:   method expm1(double[],int,double[],int)
  location: variable dSCompiler0 of type DSCompiler
/home/liumengjiao/Desktop/CI/Evosuite/Math_10/Math/evosuite/3/org/apache/commons/math3/analysis/differentiation/DSCompiler_ESTest.java:244: error: cannot find symbol
      dSCompiler0.log1p(doubleArray0, 0, doubleArray0, 0);
                 ^
  symbol:   method log1p(double[],int,double[],int)
  location: variable dSCompiler0 of type DSCompiler
/home/liumengjiao/Desktop/CI/Evosuite/Math_10/Math/evosuite/3/org/apache/commons/math3/analysis/differentiation/DSCompiler_ESTest.java:253: error: cannot find symbol
      dSCompiler0.log1p(doubleArray0, 0, doubleArray0, 0);
                 ^
  symbol:   method log1p(double[],int,double[],int)
  location: variable dSCompiler0 of type DSCompiler
/home/liumengjiao/Desktop/CI/Evosuite/Math_10/Math/evosuite/3/org/apache/commons/math3/analysis/differentiation/DSCompiler_ESTest.java:263: error: cannot find symbol
      dSCompiler0.log10(doubleArray0, 0, doubleArray0, 0);
                 ^
  symbol:   method log10(double[],int,double[],int)
  location: variable dSCompiler0 of type DSCompiler
/home/liumengjiao/Desktop/CI/Evosuite/Math_10/Math/evosuite/3/org/apache/commons/math3/analysis/differentiation/DSCompiler_ESTest.java:274: error: cannot find symbol
        dSCompiler0.log10(doubleArray0, 0, doubleArray0, 53);
                   ^
  symbol:   method log10(double[],int,double[],int)
  location: variable dSCompiler0 of type DSCompiler
/home/liumengjiao/Desktop/CI/Evosuite/Math_10/Math/evosuite/3/org/apache/commons/math3/analysis/differentiation/DSCompiler_ESTest.java:421: error: cannot find symbol
        dSCompiler0.cosh(doubleArray0, 0, doubleArray0, 721);
                   ^
  symbol:   method cosh(double[],int,double[],int)
  location: variable dSCompiler0 of type DSCompiler
/home/liumengjiao/Desktop/CI/Evosuite/Math_10/Math/evosuite/3/org/apache/commons/math3/analysis/differentiation/DSCompiler_ESTest.java:437: error: cannot find symbol
        dSCompiler0.cosh(doubleArray0, 2, doubleArray0, (-1181));
                   ^
  symbol:   method cosh(double[],int,double[],int)
  location: variable dSCompiler0 of type DSCompiler
/home/liumengjiao/Desktop/CI/Evosuite/Math_10/Math/evosuite/3/org/apache/commons/math3/analysis/differentiation/DSCompiler_ESTest.java:451: error: cannot find symbol
      dSCompiler0.sinh(doubleArray0, 0, doubleArray0, 0);
                 ^
  symbol:   method sinh(double[],int,double[],int)
  location: variable dSCompiler0 of type DSCompiler
/home/liumengjiao/Desktop/CI/Evosuite/Math_10/Math/evosuite/3/org/apache/commons/math3/analysis/differentiation/DSCompiler_ESTest.java:463: error: cannot find symbol
        dSCompiler0.sinh(doubleArray0, 0, doubleArray0, (-1506));
                   ^
  symbol:   method sinh(double[],int,double[],int)
  location: variable dSCompiler0 of type DSCompiler
/home/liumengjiao/Desktop/CI/Evosuite/Math_10/Math/evosuite/3/org/apache/commons/math3/analysis/differentiation/DSCompiler_ESTest.java:477: error: cannot find symbol
      dSCompiler0.tanh(doubleArray0, 0, doubleArray0, 0);
                 ^
  symbol:   method tanh(double[],int,double[],int)
  location: variable dSCompiler0 of type DSCompiler
/home/liumengjiao/Desktop/CI/Evosuite/Math_10/Math/evosuite/3/org/apache/commons/math3/analysis/differentiation/DSCompiler_ESTest.java:489: error: cannot find symbol
        dSCompiler0.tanh(doubleArray0, 1, doubleArray0, (-931));
                   ^
  symbol:   method tanh(double[],int,double[],int)
  location: variable dSCompiler0 of type DSCompiler
/home/liumengjiao/Desktop/CI/Evosuite/Math_10/Math/evosuite/3/org/apache/commons/math3/analysis/differentiation/DSCompiler_ESTest.java:503: error: cannot find symbol
      dSCompiler0.acosh(doubleArray0, 0, doubleArray0, 0);
                 ^
  symbol:   method acosh(double[],int,double[],int)
  location: variable dSCompiler0 of type DSCompiler
/home/liumengjiao/Desktop/CI/Evosuite/Math_10/Math/evosuite/3/org/apache/commons/math3/analysis/differentiation/DSCompiler_ESTest.java:515: error: cannot find symbol
        dSCompiler0.acosh(doubleArray0, 2, doubleArray0, (-1368));
                   ^
  symbol:   method acosh(double[],int,double[],int)
  location: variable dSCompiler0 of type DSCompiler
/home/liumengjiao/Desktop/CI/Evosuite/Math_10/Math/evosuite/3/org/apache/commons/math3/analysis/differentiation/DSCompiler_ESTest.java:531: error: cannot find symbol
        dSCompiler0.asinh(doubleArray0, 6, doubleArray0, 2689);
                   ^
  symbol:   method asinh(double[],int,double[],int)
  location: variable dSCompiler0 of type DSCompiler
/home/liumengjiao/Desktop/CI/Evosuite/Math_10/Math/evosuite/3/org/apache/commons/math3/analysis/differentiation/DSCompiler_ESTest.java:545: error: cannot find symbol
      dSCompiler0.asinh(doubleArray0, 0, doubleArray0, 0);
                 ^
  symbol:   method asinh(double[],int,double[],int)
  location: variable dSCompiler0 of type DSCompiler
/home/liumengjiao/Desktop/CI/Evosuite/Math_10/Math/evosuite/3/org/apache/commons/math3/analysis/differentiation/DSCompiler_ESTest.java:556: error: cannot find symbol
        dSCompiler0.asinh(doubleArray0, 0, doubleArray0, 30);
                   ^
  symbol:   method asinh(double[],int,double[],int)
  location: variable dSCompiler0 of type DSCompiler
/home/liumengjiao/Desktop/CI/Evosuite/Math_10/Math/evosuite/3/org/apache/commons/math3/analysis/differentiation/DSCompiler_ESTest.java:570: error: cannot find symbol
      dSCompiler0.atanh(doubleArray0, 0, doubleArray0, 1);
                 ^
  symbol:   method atanh(double[],int,double[],int)
  location: variable dSCompiler0 of type DSCompiler
/home/liumengjiao/Desktop/CI/Evosuite/Math_10/Math/evosuite/3/org/apache/commons/math3/analysis/differentiation/DSCompiler_ESTest.java:582: error: cannot find symbol
        dSCompiler0.atanh(doubleArray0, 0, doubleArray0, 27);
                   ^
  symbol:   method atanh(double[],int,double[],int)
  location: variable dSCompiler0 of type DSCompiler
18 errors
